# ur-webif

./: CMakeLists.txt  README.md
config/: credentials.enc  server.json
data/backup/: backup-info.json
data/cellular/: config-data.json  scan-data.json  sim-data.json  status-data.json
data/file-auth-attempts/: auth_1758306561066_admin_admin_1758302427790.uacc  auth_1758393609145_admin_Namm_1758308118106.uacc  auth_1758460934872_admin_FehmiFehmi_1758460792194.uacc
data/firmware/: current-firmware.json  download-progress.json  upgrade-progress.json  upgrade-readiness.json
data/firmware/manual-upload/manual_1758198024778_4452/: metadata.json
data/firmware/manual-upload/manual_1758198084696_6598/: metadata.json
data/firmware/manual-upload/manual_1758461364347_9265/: metadata.json
data/license/: license-config.json  license-configuration.json  license-status.json
data/network-priority/: bridges.json  firewall-rules.json  interfaces.json  nat-rules.json  routing-rules.json  static-routes.json  vlans.json
data/vpn/: routing-rules.json  sec-settings.json  vpn-profiles.json
data/wireless/: AccessPointConfiguration.json  AccessPointStatus.json  AvailableNetworks.json  ManualConnect.json  SavedNetworks.json
docs/: cellular-backend-integration.md  http-client-architecture.md
include/: api_endpoints.h  api_request.h  auth_router.h  cellular_data_manager.h  config_manager.h  config_parser.h  credential_manager.h  dashboard_globals.h  dashboard_router.h  dynamic_router.h  endpoint_logger.h  file_server.h  http_event_handler.h  http_handler.h  license_data_structure.h  network_priority_data_manager.h  password_manager.h  route_processors.h  source-page-data.hpp  utils_router.h  vpn_data_manager.h  web_server.h  websocket_handler.h  wired_router.h
mecanisms/iperf3-server-parser/: CMakeLists.txt  iperf3_server_parser.cpp  iperf3_server_parser.h
mecanisms/iperf3-server-parser/servers/: ultima-rabotics-servers.json  unparsed_iperf3_servers.json
mecanisms/login/: CMakeLists.txt  README_INTEGRATION.txt  integration_example.hpp  login_handler.cpp  login_handler.hpp  login_manager.cpp  login_manager.hpp  security_utils.cpp  security_utils.hpp
mecanisms/vpn-parser/: CMakeLists.txt  README.md  ikev2_parser.cpp  ikev2_parser.hpp  openvpn_parser.cpp  openvpn_parser.hpp  vpn_parser_manager.cpp  vpn_parser_manager.hpp  wireguard_parser.cpp  wireguard_parser.hpp
src/: api_endpoints.cpp  auth_router.cpp  cellular_data_manager.cpp  config_manager.cpp  config_parser.cpp  credential_manager.cpp  dashboard_globals.cpp  dashboard_router.cpp  dynamic_router.cpp  endpoint_logger.cpp  file_server.cpp  http_event_handler.cpp  http_handler.cpp  license_data_structure.cpp  main.cpp  multipart_parser.cpp  multipart_parser.h  network_priority_data_manager.cpp  password_manager.cpp  route_processors.cpp  source-page-data.cpp  utils_router.cpp  vpn_data_manager.cpp  web_server.cpp  websocket_handler.cpp  wired_router.cpp  wireless_router.cpp
src/auth-gen/: auth_access_generator.cpp  auth_access_generator.h  auth_access_router.cpp  auth_access_router.h
src/backup-restore/: backup_handler.cpp  backup_handler.h
src/firmware-update/: manual_upload_handler.cpp  manual_upload_handler.h  tftp_client.cpp  tftp_client.h
src/network-ops/: bridge-handler.cpp  bridge-handler.h  firewall-handler.cpp  firewall-handler.h  nat-handler.cpp  nat-handler.h  static-routes-handler.cpp  static-routes-handler.h  vlan-handler.cpp  vlan-handler.h
src/routers/: AdvancedNetworkRouter.cpp  AdvancedNetworkRouter.h  BackupRouter.cpp  BackupRouter.h  FirmwareRouter.cpp  FirmwareRouter.h  LicenseRouter.cpp  LicenseRouter.h  NetworkPriorityRouter.cpp  NetworkPriorityRouter.h  NetworkUtilityRouter.cpp  NetworkUtilityRouter.h  VpnRouter.cpp  VpnRouter.h  WirelessRouter.cpp  WirelessRouter.h
src/sysupgrade-mecanism/: sysupgrade_handler.cpp  sysupgrade_handler.h
src/utilities/: BandwidthUtilityEngine.cpp  BandwidthUtilityEngine.hpp  DNSLookupUtilityEngine.cpp  DNSLookupUtilityEngine.hpp  Iperf3ServersEngine.cpp  Iperf3ServersEngine.hpp  PingUtilityEngine.cpp  PingUtilityEngine.hpp  TracerouteUtilityEngine.cpp  TracerouteUtilityEngine.hpp  test_bandwidth_utility.cpp  test_dns_lookup_utility.cpp  test_iperf3_servers_engine.cpp  test_ping_utility.cpp  test_traceroute_utility.cpp
ur-webif-api/data/backup/: backup-info.json  backup_full_2025-09-21_16-08-16_351.uhb  backup_full_2025-09-21_16-20-20_313.uhb  backup_full_2025-09-21_16-21-00_963.uhb  backup_partial_2025-09-21_16-44-58_007.uhb
ur-webif-api/data/backup-storage/: backup-info.json  backup_full_2025-09-21_17-53-35_672.uhb  backup_full_2025-09-21_17-54-01_317.uhb  backup_full_2025-09-21_18-29-44_587.uhb  backup_full_2025-09-21_18-31-01_678.uhb  backup_partial_2025-09-21_17-54-56_508.uhb
ur-webif-api/data/vpn/: routing-rules.json  sec-settings.json  vpn-profiles.json
web/: config.json  index.html
web/assets/js/: app.js  session-state-manager.js
web/assets/js/core/: BaseSectionManager.js  http-request-manager.js
web/assets/js/sections/: AdvancedNetworkSection.js  BackupSection.js  CellularSection.js  LicenseSection.js  NetworkUtilitySection.js  SystemSection.js  VpnSection.js  WirelessSection.js
web/assets/js/utils/: config.js  icons.js  jwt-utils.js  session-integration.js  session-state-manager.js
web/components/: about-us-section.html  add-wired-connection-profile-popup.html  advance-network-section.html  attached-ip-cameras-section.html  backup-restore-section.html  cellular-config-section.html  firmware-upgrade-progress-popup.html  firmware-upgrade-section.html  landing-section.html  license-section.html  mavlink-device-data-popup.html  mavlink-device-reboot-popup.html  mavlink-device-rename-popup.html  mavlink-extension-section.html  mavlink-system-overview-section.html  network-priority-section.html  network-utility-section.html  source.html  vpn-configuration-section.html  wired-config-section.html
